<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    >

    <LinearLayout


        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">


        <View
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@color/colorPrimaryDark"></View>


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/textview_q_and_a_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="50dp"
                android:text="@string/question1"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/textfield_answer_a_C"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:onClick="answer_1_correct"
                android:padding="24dp"
                android:text="@string/answer_1_a"></RadioButton>


            <RadioButton
                android:id="@+id/textfield_answer_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:onClick="answer_1_wrong"
                android:padding="24dp"
                android:text="@string/answer_1_c"></RadioButton>


            <RadioButton
                android:id="@+id/textfield_answer_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:onClick="answer_1_wrong"
                android:padding="24dp"
                android:text="@string/answer_2_b"></RadioButton>

            <RadioButton
                android:id="@+id/textfield_answer_d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:onClick="answer_1_wrong"
                android:padding="24dp"
                android:layout_marginBottom="40dp"
                android:text="@string/answer_2_d"></RadioButton>

        </RadioGroup>

        <View
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@color/colorPrimaryDark"></View>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="50dp"
            android:textSize="24sp"
            android:text="@string/question2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RadioButton
                android:id="@+id/textfield_answer_2_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:onClick="answer_2_wrong"
                android:padding="24dp"
                android:text="@string/answer_2_a"></RadioButton>


            <RadioButton
                android:id="@+id/textfield_answer_2_b_C"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:onClick="answer_2_correct"
                android:padding="24dp"
                android:text="@string/answer_2_b"></RadioButton>


            <RadioButton
                android:id="@+id/textfield_answer_2_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:onClick="answer_2_wrong"
                android:padding="24dp"
                android:text="@string/answer_2_c"></RadioButton>


            <RadioButton
                android:id="@+id/textfield_answer_2_d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:onClick="answer_2_wrong"
                android:padding="24dp"
                android:layout_marginBottom="40dp"
                android:text="@string/answer_2_d"></RadioButton>

        </RadioGroup>


        <View
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@color/colorPrimaryDark"></View>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="50dp"
            android:textSize="24sp"
            android:text="@string/question3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RadioButton
                android:id="@+id/textfield_answer_3_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:onClick="answer_3_wrong"
                android:padding="24dp"
                android:text="@string/answer_3_a"></RadioButton>


            <RadioButton
                android:id="@+id/textfield_answer_3_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:onClick="answer_3_wrong"
                android:padding="24dp"
                android:text="@string/answer_3_b"></RadioButton>


            <RadioButton
                android:id="@+id/textfield_answer_3_c_C"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:onClick="answer_3_correct"
                android:padding="24dp"
                android:text="@string/answer_3_c"></RadioButton>


            <RadioButton
                android:id="@+id/textfield_answer_3_d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:onClick="answer_3_wrong"
                android:padding="24dp"
                android:layout_marginBottom="40dp"
                android:text="@string/answer_3_d"></RadioButton>

        </RadioGroup>


        <View
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@color/colorPrimaryDark"></View>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="50dp"
            android:textSize="24sp"
            android:text="@string/question4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RadioButton
                android:id="@+id/textfield_answer_4_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:onClick="answer_4_wrong"
                android:padding="24dp"
                android:text="@string/answer_4_a"></RadioButton>


            <RadioButton
                android:id="@+id/textfield_answer_4_b_C"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:onClick="answer_4_correct"
                android:padding="24dp"
                android:text="@string/answer_4_b"></RadioButton>


            <RadioButton
                android:id="@+id/textfield_answer_4_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:onClick="answer_4_wrong"
                android:padding="24dp"
                android:text="@string/answer_4_c"></RadioButton>


            <RadioButton
                android:id="@+id/textfield_answer_4_d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:onClick="answer_4_wrong"
                android:padding="24dp"
                android:layout_marginBottom="40dp"
                android:text="@string/answer_4_d"></RadioButton>

        </RadioGroup>


        <View
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@color/colorPrimaryDark"></View>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="50dp"
            android:textSize="24sp"
            android:text="@string/question5">

        </EditText>


        <CheckBox
            android:id="@+id/checkbox_1_correct"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:padding="24dp"
            android:text="@string/answer_5_a"
            android:onClick="answer_5_correct_I"

            ></CheckBox>

        <CheckBox
            android:id="@+id/checkbox_2_wrong"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:padding="24dp"
            android:text="@string/answer_5_b"
            android:onClick="answer_5_wrong_I"
            ></CheckBox>

        <CheckBox
            android:id="@+id/checkbox_3_correct"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:padding="24dp"
            android:text="@string/answer_5_c"
            android:onClick="answer_5_correct_II"
            ></CheckBox>

        <CheckBox
            android:id="@+id/checkbox_4_wrong"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:padding="24dp"
            android:text="@string/answer_5_d"
            android:onClick="answer_5_wrong_II"
            ></CheckBox>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="50dp"
            android:gravity="center"
            android:textSize="24sp"
            android:text="@string/question_6_header"></TextView>


        <EditText
           android:id="@+id/edittext_answer_6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="50dp"
            android:text="@string/question_6"
            android:onClick="checkAnswer6"

            ></EditText>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="checkAnswer6"
            android:text="@string/show_answer"></Button>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="50dp"
            android:gravity="center"
            android:textSize="24sp"
            android:text="@string/question_6_header"></TextView>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showResult"
            android:text="@string/show_my_results"></Button>



        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="40dp"
            android:text=""
            android:textSize="24sp"></TextView>


    </LinearLayout>

</ScrollView>